# learn_opengl

./: .gitmodules  CMakeLists.txt
engine/: CMakeLists.txt  camera.cpp  game.cpp  light.cpp  material.cpp  mesh.cpp  object.cpp  shader.cpp  texture.cpp  transform.cpp
engine/include/engine/: camera.h  game.h  light.h  material.h  mesh.h  object.h  shader.h  texture.h  transform.h
game/: CMakeLists.txt  freelookCamera.cpp  freelookCamera.h  main.cpp
game/data/: materials.hpp  primitives.hpp
shaders/: fragment.fs  test.fs  test.vs  vertex.vert  vertex.vs
src/: CMakeLists.txt  camera.cpp  camera.h  cube.cpp  cube.h  main.cpp  shader.cpp  shader.h  transform.cpp  transform.h
